whoami/2_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  labels:
    run: whoami
spec:
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
  selector:
    run: whoami
